# tt10-kapton

./: info.yaml
data/: backup_on.hex  backup_pitch.hex  backup_trigger.hex  bass_on.hex  bass_pitch.hex  bass_trigger.hex  drum_snare.hex  logo.hex  melody_on.hex  melody_pitch.hex  melody_trigger.hex  truchet.hex
docs/: info.md
music/: CMakeLists.txt  consts.py  song.txt  synth.py  track.py
music/libfm/: CMakeLists.txt
music/libfm/include/libfm/: adsr.hpp  fm_channel.hpp  pulse_channel.hpp  tables.hpp
music/libfm/src/: adsr.cpp  fm_channel.cpp  pulse_channel.cpp  tables.cpp
music/standalone/: CMakeLists.txt
music/standalone/src/: audio.cpp  audio.hpp  main.cpp  midi.cpp  midi.hpp
orangecrab/: .gitignore  Makefile  demo_orangecrab.v
scripts/: bounce.py  logo.ipynb
src/: music.v  noise_channel.v  pulse_channel.v  tt_um_a1k0n_kapton.v  tt_um_kapt0n.v  vgapg.v
test/: Makefile  tb.v
verilator/: .gitignore  Makefile  audiotrack_tb.cpp  vgademo_tb.cpp
